--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,151 @@
-*,
-*::after,
-*::before {
+* {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+li {
+  text-decoration: none;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  font-family: Shrikhand, sans-serif;
+}
+
+@keyframes grow {
+  0% {
+    transform: scaleY(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scaleY(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scaleY(0);
+    opacity: 0;
+  }
+}
+@keyframes pulse {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+/* .btn{
+    @include flex-center; 
+
+    width: 50%;
+
+    padding: 0.5em 1em;
+
+    border-radius: 7em;
+
+    box-shadow: 0px 0px 10px 10px rgba(0 0 0 / 30%);
+
+    opacity: 1;
+
+    cursor: pointer;
+
+    background: linear-gradient($color-2 0%, $color-1 100%);
+    color: white;
+
+    position: relative;
+
+    &::after{
+        content: '';
+
+        border-radius: 7em;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+
+        background: radial-gradient(circle, lighten($color-1, 2) 0%, darken($color-2, 5) 100%);
+        opacity: 0;
+
+        transition: opacity $duration;
+
+        z-index: -1;
+    }
+    p{
+        color: white;
+    }
+
+    &:hover{
+        opacity: 0.8;
+        transform: opacity $duration;
+        box-shadow: 0px 0px 10px 10px rgba(0 0 0 / 40%);
+
+        &::after{
+            opacity: 1;
+        }
+    }   
+} */
+.btn-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(#FF79DA 0%, #9356DC 100%);
+  color: white;
+  padding: 0.5em 1em;
+  border-radius: 7em;
+  box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.15);
+}
+.btn-2:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease-out;
+  opacity: 0.9;
+}
+.btn-2:active {
+  transform: translate(0.2em, 0.2em);
+  transition: transform ease-out;
+}
+
+/* loader barres */
+.loader-bars:before,
+.loader-bars:after,
+.loader-bars span:before,
+.loader-bars span:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 10px;
+  height: 30px;
+  background: linear-gradient(#9356DC 0%, #FF79DA 50%, #99E2D0 100%);
+  animation: grow 1.2s linear infinite;
+}
+
+.loader-bars:after {
+  left: 15px;
+  animation-delay: -0.25s;
+}
+
+.loader-bars span:before {
+  left: 30px;
+  animation-delay: -0.5s;
+}
+
+.loader-bars span:after {
+  left: 45px;
+  animation-delay: -0.75s;
 }
 
 /*# sourceMappingURL=style.css.map */
