--- a/main.scss
+++ b/main.scss
@@ -6,8 +6,10 @@
 
 @import "./sass/base/bases";
 @import "./sass/base/typography";
+@import "./sass/base/animations";
 
 @import "./sass/components/buttons";
+@import "./sass/components/loader";
 
 @import "./sass/layout/header";
 @import "./sass/layout/nav";
