--- a/sass/base/_bases.scss
+++ b/sass/base/_bases.scss
@@ -1,18 +1,15 @@
-*,
-*::after,
-*::before 
+* 
 {
     margin: 0;
     padding: 0;
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
 
-html 
-{
-
+a{
+    color: black;
+    text-decoration: none;
+}
+li{
+    text-decoration: none;
 }
 
-body 
-{
-
-}
