--- a/main.scss
+++ b/main.scss
@@ -12,9 +12,7 @@
 @import "./sass/components/loader";
 
 @import "./sass/layout/header";
-@import "./sass/layout/nav";
-@import "./sass/layout/container";
-@import "./sass/layout/form";
+@import "./sass/layout/main";
 
 
 @import "./sass/pages/work";
