--- a/sass/base/_bases.scss
+++ b/sass/base/_bases.scss
@@ -4,12 +4,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* body{
+    ;
+} */
 
 a{
     color: black;
     text-decoration: none;
 }
 li{
-    text-decoration: none;
+    list-style: none;
 }
 
