--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -60,14 +60,19 @@
     @include btn;
 
     &:hover{
-    transform: scale(1.1);
-    transition: transform $duration ease-out;
+        @include btn-hover;
+    /* transform: scale(1.1);
     opacity: 0.9;
+    box-shadow: 0px 10px 10px 0px rgba(0 0 0 / 20%);
+
+    transition: all $duration ease-out; */
     }
 
     &:active{
-        transform: translate(0.2em, 0.2em);
-        transition: transform ease-out;
+        @include btn-active;
+        /* transform: translate(0.2em, 0.2em);
+        box-shadow: 0px 5px 2px 0px rgba(0 0 0 / 15%);
+        transition: transform ease-out; */
     }
 }
 
