--- a/main.scss
+++ b/main.scss
@@ -13,7 +13,7 @@
 
 @import "./sass/layout/header";
 @import "./sass/layout/main";
-
+@import "./sass/layout/footer";
 
 @import "./sass/pages/work";
 @import "./sass/pages/about";
