--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,5 +5,7 @@
 
     padding: 1em 0 .5em 0;
 
-    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 15%);
+    @include box-shadow-1;
+
+    position: relative;
 }
