--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -7,8 +7,10 @@
 
     height: 4em;
 
-    background: rgba(187,184,184,0.59);
-    background: linear-gradient(180deg,rgba(187,184,184,0.59) 0%, transparent 100%);
+    background: #eaeaea;
+
+    /* background: rgba(187,184,184,0.59);
+    background: linear-gradient(180deg,rgba(187,184,184,0.59) 0%, transparent 100%); */
 }
 
 //hero
@@ -44,8 +46,6 @@
 //nav
 
 .nav{
-    border: solid black 1px;
-
     padding: 2em 1em;
 
     &__title{
@@ -58,13 +58,15 @@
         padding: 1em 1em;
         
         border-radius: 1em 1em 1em 1em;
-        box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 15%);
+        /* box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 15%); */
+        @include box-shadow-1;
 
         cursor: pointer;
 
         &:hover{
             background: lighten($color-4, 1%);
-            box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 40%);
+            /* box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 40%); */
+            @include box-shadow-2;
         }
         &:active{
             @include btn-active;
@@ -95,5 +97,73 @@
         margin-left: 0.7em;
 
         font-weight: bold;
+    }
+}
+
+//restaurants
+
+.restaurants{
+    background: $color-4;
+
+    padding: 2em 1.2em;
+
+    &__title{
+        margin-bottom: 1em;
+    }
+
+    &__card{
+        margin-bottom: 1.5em;
+
+        border-radius: 20px;
+
+        @include box-shadow-1;
+
+        position: relative;
+
+        &:hover{
+            @include box-shadow-2;
+            opacity: 0.8;
+            transition: opacity $duration;
+        }
+        &:active{
+            @include btn-active;
+        }
+
+        img{
+            object-fit: cover;
+
+            width: 100%;
+            height: 150px;
+
+            border-radius: 20px 20px 0 0;
+        }
+        &__new{
+            position: absolute;
+            top: 20px;
+            right: 17px;
+
+            padding: 0.5em 0.6em;
+
+            background-color: #99e2d0;
+            color: #139273;
+            font-weight: bold;
+
+            border-radius: 3px;
+
+            cursor: pointer;
+        }
+        &__description{
+            padding: 1.1em 1em;
+
+            position: relative;
+
+            &__like{
+                position: absolute;
+                right: 10px;
+                top: 20px;
+
+                font-size: 25px;
+            }
+        }
     }
 }
