--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -3,6 +3,12 @@
 @mixin border {
     border: 1px black solid;
 }
+@mixin box-shadow-1 {
+    box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 15%);
+}
+@mixin box-shadow-2 {
+    box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 40%);
+}
 
 @mixin flex-center {
     display: flex;
