--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,4 @@
-//header
+//header home
 
 .header{
     @include flex-center;
@@ -8,4 +8,26 @@
     @include box-shadow-1;
 
     position: relative;
+
+    //header Dish
+    &__backbtn{
+        position: absolute;
+        left: 20px;
+        top: 25px;
+
+        font-size: 25px;
+
+        &:hover{
+            @include border;
+            border-radius: 50%;
+            padding: 0.2em 0.4em;
+
+            @include btn-hover;
+        }
+        &:active{
+            @include btn-active;
+        }
+    }
 }
+
+
