--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,4 +6,48 @@ body{
 
 h1{
     font-family: Shrikhand,sans-serif;
+
+    &::after{
+        content: '';
+
+        display: block;
+
+        height: 4px;
+        width: 0%;
+
+        background: transparent;
+
+        transition: width $duration ease, background-color $duration ease;
+        transform-origin: right;
+    }
+    &:hover:after{
+        width: 100%;
+        background: black;
+    }
+}
+h5{
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 300;
+    color: $color-5;
+
+    margin-bottom: 15px;
+
+    &::after{
+        content: '';
+
+        display: block;
+
+        width: 50px;
+        height: 4px;
+
+        margin-top: 5px;
+
+        background: $color-3;
+    }
+}
+h6{
+    font-size: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
