--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -9,13 +9,11 @@
 @mixin box-shadow-2 {
     box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 40%);
 }
-
 @mixin flex-center {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 @mixin btn {
     @include flex-center;
     background: #9356dc;
@@ -25,10 +23,9 @@
     border-radius: 7em;
     box-shadow: 0px 5px 2px 0px rgba(0 0 0 / 15%);
 }
-
 @mixin btn-hover {
     transform: scale(1.1);
-    opacity: 0.9;
+    opacity: 0.8;
     box-shadow: 0px 10px 10px 0px rgba(0 0 0 / 20%);
 
     transition: all $duration ease-out;
@@ -43,4 +40,7 @@
     stroke-dasharray: $array;
     stroke-dashoffset: $offset;
     stroke-width: $width;
+}
+@mixin padding {
+    padding: 2em 1em;
 }
