--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,6 +6,7 @@
     padding: 2em 1.2em;
 
     &__title{
+        width: 130px;
         h1{
             color: white;
             font-size: 22px;
