heart animation commit

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,26 @@ h6 {
     transform: translateX(-3em);
   }
 }
+@keyframes fade {
+  0% {
+    fill: transparent;
+  }
+  100% {
+    fill: url("grad1");
+  }
+}
+@keyframes stroke {
+  0% {
+    stroke-dashoffset: 100%;
+    /* pointillets */
+    stroke-dasharray: 100%;
+    /* ecart entre pointillets */
+  }
+  100% {
+    stroke-dasharray: 0%;
+    stroke-dashoffset: 0%;
+  }
+}
 /* .btn{
     @include flex-center; 
 
@@ -195,6 +215,59 @@ h6 {
   transition: transform ease-out; */
 }
 
+/* .dish__title__like{
+    font-size: 24px;
+
+    padding: 0 1em;
+
+    .fa-heart{
+        background: transparent;
+        transition: color $duration ease-in;
+        transform-origin: bottom;
+
+        cursor: pointer;
+
+        &:active{
+            background: linear-gradient(180deg, $color-1 25%, $color-2 100%);
+            background: -webkit-linear-gradient(180deg, $color-1 25%, $color-2 100%);
+            color: transparent;
+            font-weight: bold;
+            background-clip: text;
+            -webkit-background-clip: text;
+        }
+    }
+} */
+.restaurants__card__new:hover {
+  transform: scale(1.1);
+  opacity: 0.8;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-out;
+}
+.restaurants__card__new:active {
+  transform: translate(0.2em, 0.2em);
+  box-shadow: 0px 5px 2px 0px rgba(0, 0, 0, 0.15);
+  transition: transform ease-out;
+}
+.restaurants__card__description {
+  position: relative;
+}
+.restaurants__card__description svg {
+  position: absolute;
+  right: 10px;
+  width: 30px;
+  fill: transparent;
+  stroke: black;
+  stroke-width: 40px;
+  cursor: pointer;
+}
+.restaurants__card__description svg:hover {
+  fill: url(#grad1);
+  transform: scale(1.2);
+  stroke: none;
+  transition: all 0.3s ease;
+  animation: stroke 2s ease;
+}
+
 /* loader barres */
 .loader-bars:before,
 .loader-bars:after,
@@ -248,6 +321,8 @@ h6 {
   opacity: 0.8;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease-out;
+  left: 10px;
+  top: 15px;
 }
 .header__backbtn:active {
   transform: translate(0.2em, 0.2em);
