--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -76,3 +76,65 @@
     }
 }
 
+//heart
+
+/* .dish__title__like{
+    font-size: 24px;
+
+    padding: 0 1em;
+
+    .fa-heart{
+        background: transparent;
+        transition: color $duration ease-in;
+        transform-origin: bottom;
+
+        cursor: pointer;
+
+        &:active{
+            background: linear-gradient(180deg, $color-1 25%, $color-2 100%);
+            background: -webkit-linear-gradient(180deg, $color-1 25%, $color-2 100%);
+            color: transparent;
+            font-weight: bold;
+            background-clip: text;
+            -webkit-background-clip: text;
+        }
+    }
+} */
+
+.restaurants__card{
+
+    &__new{
+
+        &:hover{
+            @include btn-hover;
+        }
+        &:active{
+            @include btn-active;
+        }
+    }
+
+    &__description{
+        position: relative;
+
+        svg{
+            position: absolute;
+            right: 10px;
+
+            width: 30px;
+
+            fill: transparent;
+            stroke: black;
+            stroke-width: 40px;
+
+            cursor: pointer;
+        
+            &:hover{
+                fill: url(#grad1);
+                transform: scale(1.2);
+                stroke: none;
+                transition: all $duration ease;
+                animation: stroke 2s ease;
+            }
+        }
+    }
+}
