--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -112,10 +112,35 @@
 
     padding: 2em 1.2em;
 
+    position: relative;
+
     &__title{
         margin-bottom: 1em;
     }
+    &__new{
+        z-index: 100;
 
+        position: absolute;
+        top: 100px;
+        right: 40px;
+
+        padding: 0.5em 0.6em;
+
+        background-color: $color-3;
+        color: #139273;
+        font-weight: bold;
+
+        border-radius: 3px;
+
+        cursor: pointer;
+        
+        &:hover{
+            @include btn-hover;
+        }
+        &:active{
+            @include btn-active;
+        }
+    }
     &__card{
         margin-bottom: 1.5em;
 
@@ -124,6 +149,8 @@
         @include box-shadow-1;
 
         position: relative;
+
+        cursor: pointer;
 
         &:hover{
             @include box-shadow-2;
@@ -149,7 +176,7 @@
 
             padding: 0.5em 0.6em;
 
-            background-color: #99e2d0;
+            background-color: $color-3;
             color: #139273;
             font-weight: bold;
 
