--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -101,6 +101,8 @@
     }
 } */
 
+
+// heart in dish card
 .restaurants__card{
 
     &__new{
@@ -134,6 +136,39 @@
                 stroke: url(#grad1);
                 transition: all .8s ease;
                 animation: stroke $duration ease;
+
+                /* background: url(#grad1); */
+                transform-origin: bottom;
+            }
+        }
+
+        &__like{
+            position: relative;
+            right: 10px;
+
+            font-size: 30px;
+
+            .heart{
+                position: absolute;
+                right: 10px;
+
+                font-size: 30px;
+
+                &--grad{
+                    transform: scale(0.1);
+                    background: -webkit-gradient(linear, left top, left bottom, from($color-1), to($color-2));	                
+                    -webkit-background-clip: text;
+	                -webkit-text-fill-color: transparent;
+                    transform-origin: 50% 65%;
+                    opacity: 0;
+                }    
+            }
+            &:hover{
+                .heart--grad{
+                    transform: scale(1.2);
+                    transition: all $duration ease-in;
+                    opacity: 1;
+                }
             }
         }
     }
