--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,7 +5,8 @@ body{
 }
 
 h1{
-    font-family: Shrikhand,sans-serif;
+    @include typo1;
+    font-size: 27px;
 
     &::after{
         content: '';
