--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -76,9 +76,9 @@
                 color: $color-1;
             }
         }
-        &:visited{
+        /* &:visited{
             background: $color-1-clr;
-        }
+        } */
     }
     &__number{
         @include flex-center;
@@ -127,7 +127,7 @@
         padding: 0.5em 0.6em;
 
         background-color: $color-3;
-        color: #139273;
+        color: $color-6;
         font-weight: bold;
 
         border-radius: 3px;
@@ -177,7 +177,7 @@
             padding: 0.5em 0.6em;
 
             background-color: $color-3;
-            color: #139273;
+            color: $color-6;
             font-weight: bold;
 
             border-radius: 3px;
@@ -203,32 +203,62 @@
 //Dish Page
 
 .dish{
-    /* position: absolute; */
-    border-radius: 20px 20px 0 0;
+    border-radius: 40px 40px 0 0;
 
     margin-top: -10px;
-    @include padding;
+    padding: 2em 1em 0 1em;
 
     background: $color-4;
 
+    transform: translateY(-90px);
+
     &__img{
-        /* position: relative; */
+
+        
+        object-fit: cover;
     
         img{
             object-fit: cover;
     
             width: 100%;
-            height: 230px;
+            height: 350px;
         }
     }
 
     &__title{
-        @include flex-center;
+        display: flex;
+        justify-content: space-around;
 
         position: relative;
 
         margin-bottom: 1.5em;
 
+        .heart{
+            width: 40px;
+            fill: black;
+
+            cursor: pointer;
+
+            path{
+                fill: transparent;
+                stroke-width: 25;
+                stroke: black;
+
+                stroke-dasharray: 1540;
+                stroke-dashoffset: 0;
+
+/*                 background: linear-gradient(190deg, rgba(147,86,220,1) 38%, rgba(255,121,218,1) 75%, rgba(255,121,218,1) 100%);
+ */
+
+                &:hover{
+                    animation: anim-heart $duration2 ease-in-out;
+                    animation-fill-mode: forwards;
+                    /* transform: scaleX(1.1); */
+                    transform: scale(1.1); /* proposition de scaling en X plus sympa au visuel */
+                    transition: all $duration ease;
+                }
+            }
+        }
     }
 
     &__order{
@@ -239,6 +269,8 @@
             display: grid;
             grid-gap: 15px;
             grid-template-rows: 1fr 1fr 1fr;
+
+            margin-bottom: 50px;
         }
     }
  
@@ -246,7 +278,7 @@
         display: flex;
         justify-content: center;
 
-        margin: 3em 0 1em 0;
+        margin: 3em 0 0em 0;
         
         .btn{
             padding: 1em 3.5em;
@@ -276,7 +308,7 @@
     &:hover &__check{
         @include flex-center;
         transform-origin: right;
-        animation: slide 3s ease;
+        animation: slide $duration ease;
     }
     &:hover .price{
         padding-right: 70px;
