--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,5 +1,9 @@
 //mixins
 
+@mixin typo1 {
+    font-family: Shrikhand,sans-serif;
+}
+
 @mixin border {
     border: 1px black solid;
 }
@@ -47,4 +51,14 @@
 @mixin gradient {
     background: rgb(147,86,220);
     background: linear-gradient(190deg, rgba(147,86,220,1) 38%, rgba(255,121,218,1) 75%, rgba(255,121,218,1) 100%);
+}
+@mixin desktop {
+	@media screen and (min-width: 1000px) {
+		@content;
+	}
+}
+@mixin tablette {
+	@media screen and (min-width: 699px) and (max-width: 999px) {
+		@content;
+	}
 }
