create nav/hero/dish page and import in main comit

--- a/main.scss
+++ b/main.scss
@@ -12,7 +12,10 @@
 @import "./sass/components/loader";
 
 @import "./sass/layout/header";
+@import "./sass/layout/hero";
+@import "./sass/layout/nav";
 @import "./sass/layout/main";
+@import "./sass/layout/dish";
 @import "./sass/layout/footer";
 
 @import "./sass/pages/work";
