--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,6 @@
   box-sizing: border-box;
 }
 
-/* body{
-    ;
-} */
 a {
   color: black;
   text-decoration: none;
@@ -42,6 +39,29 @@ h1::after {
 h1:hover:after {
   width: 100%;
   background: black;
+}
+@media screen and (min-width: 1000px) {
+  h1 {
+    font-size: 50px;
+  }
+}
+@media screen and (min-width: 699px) and (max-width: 999px) {
+  h1 {
+    font-size: 40px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  h3 {
+    text-align: center;
+    font-size: 25px;
+  }
+}
+@media screen and (min-width: 699px) and (max-width: 999px) {
+  h3 {
+    text-align: center;
+    font-size: 20px;
+  }
 }
 
 h5 {
@@ -419,15 +439,10 @@ h6 {
   box-shadow: 0px 5px 2px 0px rgba(0, 0, 0, 0.15);
   transition: transform ease-out;
 }
-
-.location {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 4em;
-  background: #eaeaea;
-  /* background: rgba(187,184,184,0.59);
-  background: linear-gradient(180deg,rgba(187,184,184,0.59) 0%, transparent 100%); */
+@media screen and (min-width: 1000px) {
+  .header {
+    height: 150px;
+  }
 }
 
 .hero {
@@ -464,9 +479,16 @@ h6 {
   /* box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 15%); */
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
-  /* &:visited{
-      background: $color-1-clr;
-  } */
+}
+@media screen and (min-width: 1000px) {
+  .nav li {
+    padding: 1em 3em;
+  }
+}
+@media screen and (min-width: 699px) and (max-width: 999px) {
+  .nav li {
+    width: 25%;
+  }
 }
 .nav li:hover {
   background: #f9f9f9;
@@ -499,9 +521,53 @@ h6 {
   color: grey;
   margin-left: 0.7em;
 }
+@media screen and (min-width: 699px) and (max-width: 999px) {
+  .nav__icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .nav__txt {
   margin-left: 0.7em;
   font-weight: bold;
+}
+@media screen and (min-width: 699px) and (max-width: 999px) {
+  .nav__txt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 0.2em;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .nav ol {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+@media screen and (min-width: 699px) and (max-width: 999px) {
+  .nav ol {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
+.location {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 4em;
+  background: #eaeaea;
+}
+.location__icon {
+  transform: translateX(-20px);
+}
+@media screen and (min-width: 1000px) {
+  .location p {
+    font-size: 20px;
+  }
 }
 
 .restaurants {
@@ -578,6 +644,24 @@ h6 {
   right: 10px;
   top: 20px;
   font-size: 25px;
+}
+
+@media screen and (min-width: 1000px) {
+  .restaurants__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 40px;
+    padding: 0 10rem;
+  }
+}
+@media screen and (min-width: 699px) and (max-width: 999px) {
+  .restaurants__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 20px;
+  }
 }
 
 .dish {
@@ -721,16 +805,49 @@ h6 {
 }
 .footer__list {
   margin: 1.2em 0;
+  width: 100%;
 }
-.footer__list li {
+.footer__list ul li {
   margin-bottom: 0.5em;
 }
-.footer__list li a {
+.footer__list ul li a {
   color: white;
   display: flex;
 }
-.footer__list li a span {
+.footer__list ul li a span {
   margin-right: 10px;
+}
+.footer__list ul li:hover {
+  transform: scale(1.1);
+  opacity: 0.8;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-out;
+}
+@media screen and (min-width: 1000px) {
+  .footer__list ul {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+@media screen and (min-width: 699px) and (max-width: 999px) {
+  .footer__list ul {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 699px) and (max-width: 999px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
