--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -13,6 +13,13 @@
 
         margin-bottom: 1em;
         padding: 1em 1em;
+
+        @include desktop{
+            padding: 1em 3em;
+            }
+        @include tablette{
+            width: 25%;
+            }
         
         border-radius: 1em 1em 1em 1em;
         /* box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 15%); */
@@ -32,9 +39,6 @@
                 color: $color-1;
             }
         }
-        /* &:visited{
-            background: $color-1-clr;
-        } */
     }
     &__number{
         @include flex-center;
@@ -53,10 +57,31 @@
     &__icon{
         color: grey;
         margin-left: 0.7em;
+
+        @include tablette{
+            @include flex-center;
+        }
     }
     &__txt{
         margin-left: 0.7em;
 
         font-weight: bold;
+
+        @include tablette{
+            @include flex-center;
+            text-align: center;
+            margin-top: .2em;
+        }
+    }
+
+    ol{
+        @include desktop{
+            display: flex;
+            justify-content: space-around;
+            }
+        @include tablette{
+            display: flex;
+            justify-content: space-around;
+            }
     }
 }
